fix: order book events with cross-chapter temporal edges